[workspace]
members = [
    "programs/*"
]
resolver = "2"

[package]
name = "stackclass-solana-swap-program"
version = "0.1.0"
authors = ["StackClass <hello@stackclass.dev>"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
